--- a/src/app/admin/allcases/allcases.component.html
+++ b/src/app/admin/allcases/allcases.component.html
@@ -1,4 +1,4 @@
-<h1>List Of Missing Persons</h1>
+<h1>List Of All Cases</h1>
 <br>
     
   <div class="table-responsive">
@@ -19,7 +19,8 @@
                   <td> {{case.appNo}}</td>
                   <td> {{case.name}}</td>
                   <td> {{case.age}} </td>
-                  <td> {{case.img}} </td>
+                  <td>  <img src="data:image/gif;base64,{{case.img}}" alt="photo" style="height: 100px;width: 100px;position: relative;">
+                  </td>
                   <td> {{case.status}}</td>
    
                   <td> 
