--- a/src/app/admin/searchuser/searchuser.component.html
+++ b/src/app/admin/searchuser/searchuser.component.html
@@ -1,10 +1,10 @@
 <h1>Search User</h1>
 <div class="form-group">
-    <label for="Name" >Name</label>
-    <input type="text" class="form-control" id="name" name="name" placeholder="enter name of user"
-    [(ngModel)]="name" required    >
+    <label for="Email" >Email</label>
+    <input type="text" class="form-control" id="email" name="email" placeholder="enter email of user"
+    [(ngModel)]="email" required    >
 </div>
-  <button type="button" (click)="onSearch()" class="btn btn-primary">Search By Name</button>
+  <button type="button" (click)="onSearch()" class="btn btn-primary">Search By Email</button>
 <br>
 <br>
 <div class="table-responsive" id="myDiv">
