--- a/src/app/ngo/ngo/ngo.component.html
+++ b/src/app/ngo/ngo/ngo.component.html
@@ -17,6 +17,7 @@
               <li><a routerLink="/ngo/ngsearch">Search</a></li>
               <li><a routerLink="/ngo/ngoinbox">Inbox</a></li>
               <li><a routerLink="/ngo/ngusers">Users</a></li>
+              <li><a routerLink="/ngo/ngupdate">Update Profile</a></li>
             </ul>
           </div>
 
