--- a/src/app/police/cases/cases.component.html
+++ b/src/app/police/cases/cases.component.html
@@ -23,7 +23,7 @@
                   <td> {{m.dob}}</td>
   
                   <td> {{m.age}} </td>
-                  <td> {{m.img}} </td>
+                  <td> <img src="data:image/gif;base64,{{m.img}}" alt="photo" style="height: 100px;width: 100px;">  </td>
   
                   <td> 
                       
