--- a/src/app/admin/adduser/adduser.component.html
+++ b/src/app/admin/adduser/adduser.component.html
@@ -1,7 +1,7 @@
-<h1 style="text-align: center">User Registeration Form</h1>
+<h1 style="text-align: center ;color: crimson;">User Registeration Form</h1>
 
 <div class="row" >
-  <div class="col-md-9">
+  <div class="col-md-5">
     <div class="form-group">
       <label for="">Full Name</label>
       <input [(ngModel)]="god.name" type="text" class="form-control">
@@ -9,6 +9,22 @@
     <div class="form-group">
       <label for="">Email</label>
       <input [(ngModel)]="god.email" type="email" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="">Role</label>
+      
+      <div class="radio">
+        <label>
+          <input type="radio" name="role" id="role" [(ngModel)]="god.role" value="ADMIN">ADMIN
+          </label>
+          <label>
+            <input type="radio" name="role" id="role" [(ngModel)]="god.role" value="POLICE">POLICE
+        </label>
+        <label>
+          <input type="radio" name="role" id="role" [(ngModel)]="god.role" value="NGO">NGO
+        </label>
+      </div>
+      
     </div>
     <div class="form-group">
       <label for="">Phone</label>
@@ -27,16 +43,40 @@
         <label for="">Country</label>
         <input [(ngModel)]="god.country" type="text" class="form-control">
       </div>
+         
+   
+  </div>
+  <div class="col-md-4">
+   
     <div class="form-group">
-        <label for="">Role</label>
-        <input [(ngModel)]="god.role" type="text" class="form-control">
-     </div>
-    <div class="form-group">
-        <label for="">Password</label>
-        <input [(ngModel)]="god.password" type="password" class="form-control">
+        <label for="">Department Name</label>
+        <input [(ngModel)]="god.deptname" type="text" class="form-control">
       </div>
-    <div class="form-group" style="text-align: center;">
-        <button (click)="onRegister()" class="btn btn-success">Register</button>
-    </div>
+      <div class="form-group">
+        <label for="">Department City</label>
+        <input [(ngModel)]="god.deptcity" type="text" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="">Department State</label>
+        <input [(ngModel)]="god.deptstate" type="text" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="">Department Country</label>
+        <input [(ngModel)]="god.deptcountry" type="text" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="">Department Contact No</label>
+        <input [(ngModel)]="god.deptphoneno" type="text" class="form-control">
+      </div>
+      <div class="form-group">
+          <label for="">Password</label>
+          <input [(ngModel)]="god.password" type="password" class="form-control">
+        </div>
+  
+  </div>
+</div>
+<div class="col-md-9">
+  <div class="form-group" style="text-align: center;">
+    <button style="width: 100px;" (click)="onRegister()" class="btn btn-success">Register</button>
   </div>
 </div>
