--- a/src/app/admin/request/request.component.html
+++ b/src/app/admin/request/request.component.html
@@ -1,4 +1,4 @@
-<h1>List of all Users Associated With us</h1>
+<h1>New Requests</h1>
 <div class="table-responsive">
     
     <table class="table table-striped table-hover">
@@ -8,7 +8,9 @@
                 <th> Name  </th>
                 <th> Role  </th>
                 <th> Email </th>
-                <th> Verify</th>
+                <th> View Details </th>
+                <th> Verify </th>
+                <th> Reject </th>
             </tr>
         </thead>
         <tbody>
@@ -20,14 +22,166 @@
                 <td> {{user.role}}</td>
 
                 <td> {{user.email}} </td>
-
+                <td> 
+                    
+                    <button style="width:100px" type="button" class="btn btn-success" (click)="ViewDetails(user.uid)">View Details</button>
+                       
+                   </td>
                 <td> 
                     
                  <button style="width:100px" type="button" class="btn btn-success" (click)="Verify(user.uid)">Verify</button>
                     
                 </td>
+                <td> 
+                    
+                    <button style="width:100px" type="button" class="btn btn-danger" (click)="Reject(user.uid)">Reject</button>
+                       
+                   </td>
+                
              </tr>
         </tbody>
     </table>
     
 </div>
+<br>
+<div class="table-responsive" id="myDiv">
+    
+    <table class="table table-striped table-hover">
+           
+            <tbody>
+                    <tr>
+                        <td>
+                            <h4> User Id </h4>
+                        </td>
+                        <td>
+                            {{god.uid}}
+                        </td>
+                    </tr>
+    
+                    <tr>
+                            <td>
+                                <h4> User Name </h4>
+                            </td>
+                            <td>
+                                {{god.name}}
+                            </td>
+                        </tr>
+    
+                    <tr>
+                            <td>
+                                <h4> User Email </h4>
+                            </td>
+                            <td>
+                                {{god.email}}
+                            </td>
+                        </tr>
+    
+                    <tr>
+                            <td>
+                                <h4> User Role </h4>
+                            </td>
+                            <td>
+                                {{god.role}}
+                            </td>
+                        </tr>
+    
+                    <tr>
+                            <td>
+                                <h4> User Verification Status </h4>
+                            </td>
+                            <td>
+                                {{god.stat}}
+                            </td>
+                        </tr>
+    
+                    <tr>
+                            <td>
+                                <h4> User City </h4>
+                            </td>
+                            <td>
+                                {{god.city}}
+                            </td>
+                        </tr>
+    
+                    <tr>
+                            <td>
+                                <h4> User State </h4>
+                            </td>
+                            <td>
+                                {{god.state}}
+                            </td>
+                        </tr>
+    
+                    <tr>
+                            <td>
+                                <h4> User Country </h4>
+                            </td>
+                            <td>
+                                {{god.country}}
+                            </td>
+                        </tr>
+    
+                    <tr>
+                            <td>
+                                <h4> User Phone No </h4>
+                            </td>
+                            <td>
+                                {{god.phoneno}}
+                            </td>
+                        </tr>
+    
+                    <tr>
+                          <td colspan="2">
+                             <h2>  Department Information </h2>
+                            </td>
+                    </tr>
+    
+                    <tr>
+                            <td>
+                                <h4> Department Name </h4>
+                            </td>
+                            <td>
+                                {{god.deptname}}
+                            </td>
+                        </tr>
+    
+                    <tr>
+                            <td>
+                                <h4> Department City </h4>
+                            </td>
+                            <td>
+                                {{god.deptcity}}
+                            </td>
+                        </tr>
+    
+                    <tr>
+                            <td>
+                                <h4> Department State </h4>
+                            </td>
+                            <td>
+                                {{god.deptstate}}
+                            </td>
+                        </tr>
+    
+                    <tr>
+                            <td>
+                                <h4> Department Country </h4>
+                            </td>
+                            <td>
+                                {{god.deptcountry}}
+                            </td>
+                        </tr>
+    
+                    <tr>
+                            <td>
+                                <h4> Department Contact No </h4>
+                            </td>
+                            <td>
+                                {{god.deptphoneno}}
+                            </td>
+                        </tr>
+    
+            </tbody>
+        </table>
+        
+    </div>
