--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -22,8 +22,8 @@
   <div class="col-md-1">
     <img src="assets/logo.jpg" style="height: 150px;width: 100px;">
   </div>
-  <div class="col-md-10">
-    <h1>Government Of India</h1>
+  <div class="col-md-10" style="font-family:'Times New Roman', Times, serif ;">
+    <h1 >Government Of India</h1>
     <h2>Human Anti-Trafficking Portal</h2>
   </div>
  </div>
@@ -41,71 +41,71 @@
           </div> 
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li class="active"><a routerLink="/home/frontpage">Home</a></li>
-              <li><a routerLink="/home/gallery">Gallery</a></li>
-              <li><a routerLink="/home/stat">Statistics</a></li>
-              <li><a routerLink="/home/org">Orgnisations</a></li>
-              <li><a routerLink="/home/about">About us</a></li>
+              <li class="active"><a routerLink="/home">Home</a></li>
+              <li><a routerLink="/gallery">Gallery</a></li>
+              <li><a routerLink="/stat">Statistics</a></li>
+              <li><a routerLink="/org">Orgnisations</a></li>
+              <li><a routerLink="/about">About us</a></li>
             </ul>
             
           </div>
         </div>
       </nav>
         
-      <div class="container-fluid text-center">    
-        <div class="row content">
-          <div class="col-md-3 sidenav">
-            
-            <div class="jumbotron" style="text-align: left;">
-              <h2>Helpline</h2>
-              <p> Contacts to be added... </p>
-              </div>
-          </div>
-          <div class="col-md-6 text-left"> 
-              <div class="jumbotron">
-                  <div class="container">
-                    <h1>Welcome..</h1>
-                    <p style="text-align: justify;"> This portal is help to manage human anti-trafficking
-                        cases for police and releated NGO's.  </p>
-                      <h3 style="font-weight: 600;"> What is Human Trafficking ?</h3>
-                      <p> ...static data...</p>
-                  </div>
-                </div>  
-                <router-outlet></router-outlet> 
-          </div>
-          <div class="col-md-3 ">
-            
-    <legend>Login Here</legend>
-    <div class="form-group">
-        <label for="Email" >UserName</label>
-        <input type="text" class="form-control" id="email" name="email" placeholder="email"
-        [(ngModel)]="user.email" required    >
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" name="password" placeholder="password"
-        [(ngModel)]="user.password" required >
-    </div>
-    <br>  
-   <span class="label label-danger">{{message}}</span>
-    <div class="form-group" style="text-align: center;">
-    <table style="text-align: center;">
-        <tr>
-            <td style="position: static;" > <button type="button" (click)="SignIn()" class="btn btn-primary " style="width: 310px;">Sign in</button></td>
-        </tr>
-        <br>
-        <tr> 
-          <td ><button type="button" class="btn btn-success " (click)="checkResponse()" style="width: 310px">Register as Police</button></td>
-        </tr>
-
-        <br>
-        <tr> 
-          <td ><button type="button" class="btn btn-success " (click)="checkResponseNgo()"style="width: 310px;">Register as Ngo</button></td>
-        </tr>
-    </table> 
-    </div>
-          </div>
+      <div class="container-fluid text-center">  
+         <div class="row content">
+        <div class="col-md-3 sidenav">
+          
+          <div class="jumbotron" style="text-align: left;">
+            <h2>Helpline</h2>
+            <p> Contacts to be added... </p>
+            </div>
         </div>
+        <div class="col-md-6 text-left"> 
+            <div class="jumbotron">
+                <div class="container">
+                  <h1>Welcome..</h1>
+                  <p style="text-align: justify;"> This portal is help to manage human anti-trafficking
+                      cases for police and releated NGO's.  </p>
+                    <h3 style="font-weight: 600;"> What is Human Trafficking ?</h3>
+                    <p> ...static data...</p>
+                </div>
+              </div>  
+              <router-outlet></router-outlet>
+        </div>
+        <div class="col-md-3 ">
+          
+  <legend>Login Here</legend>
+  <div class="form-group">
+      <label for="Email" >UserName</label>
+      <input type="text" class="form-control" id="email" name="email" placeholder="email"
+      [(ngModel)]="user.email" required    >
+  </div>
+  <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" id="password" name="password" placeholder="password"
+      [(ngModel)]="user.password" required >
+  </div>
+  <br>  
+ <span class="label label-danger">{{message}}</span>
+  <div class="form-group" style="text-align: center;">
+  <table style="text-align: center;">
+      <tr>
+          <td style="position: static;" > <button type="button" (click)="SignIn()" class="btn btn-primary " style="width: 310px;">Sign in</button></td>
+      </tr>
+      <br>
+      <tr> 
+        <td ><button type="button" class="btn btn-success " (click)="checkResponse()" style="width: 310px">Register as Police</button></td>
+      </tr>
+
+      <br>
+      <tr> 
+        <td ><button type="button" class="btn btn-success " (click)="checkResponseNgo()"style="width: 310px;">Register as Ngo</button></td>
+      </tr>
+  </table> 
+  </div>
+        </div>
+      </div>
       </div>
       
       <footer class="container-fluid text-center">
