--- a/src/app/ngo/ngupdate/ngupdate.component.html
+++ b/src/app/ngo/ngupdate/ngupdate.component.html
@@ -1,7 +1,8 @@
 <h1 style="text-align: center"> Update Profile </h1>
 
 <div class="row" >
-  <div class="col-md-9">
+    <div class="col-md-3"></div>
+  <div class="col-md-6" style="text-align: left;">
       <div class="form-group">
           <label for="">Full Name</label>
           <input [(ngModel)]="god.name" type="text" class="form-control">
@@ -25,9 +26,10 @@
           </div>
         
       </div>
+      <div class="col-md-3"></div>
 </div>
 <div class="row">
-  <div class="col-md-9">
+  <div class="col-md-12">
   <div class="form-group" style="text-align: center;">
     <button (click)="onUpdate()" class="btn btn-success">Update</button>
 </div>
