--- a/src/app/police/policehome/policehome.component.html
+++ b/src/app/police/policehome/policehome.component.html
@@ -27,7 +27,7 @@
                 <a  routerLink="/policehome/inbox">Inbox</a>
               </li>
               <li>
-                <a routerLink="/policehome/ngolist">NGO's</a>
+                <a routerLink="/policehome/ngolist">Users</a>
               </li>
 
               <li>
@@ -41,14 +41,14 @@
         
       <div class="container-fluid text-center">    
         <div class="row content">
-          <div class="col-md-4 sidenav">
+          <div class="col-md-3 sidenav">
             
             <div class="jumbotron" style="text-align: left;">
               <h2>News</h2>
               <p> Contents to be added... </p>
               </div>
            </div>
-          <div class="col-md-8 text-left"> 
+          <div class="col-md-9 text-left"> 
                 <router-outlet></router-outlet>
           </div>
     <div class="col-md-12">   
