--- a/src/app/police/search/search.component.html
+++ b/src/app/police/search/search.component.html
@@ -7,37 +7,61 @@
   <button type="button" (click)="onSearch()" class="btn btn-primary">Search By Name</button>
 <br>
      <div class="table-responsive" id="myDiv">
-<table>
-  <tr>
-    Application Id :<td> {{map.appNo}}</td>
-    Name :<td> {{map.name}}</td>
-  </tr>
-  <tr>
-    Age :<td> {{map.age}}</td>
-    Gender :<td> {{map.gendor}}</td>
-  </tr>
-  <tr>
-    Height :<td> {{map.height}}</td>
-    Blood Group :<td> {{map.bgrp}}</td>
-  </tr>
-  <tr>
-    Date Of Birth :<td> {{map.dob}}</td>
-    Missing Date :<td> {{map.missingDate}}</td>
-  </tr>
-  <tr>
-    City :<td> {{map.city}}</td>
-    State :<td> {{map.state}}</td>
-  </tr>
-
-  <tr>
-    Country :<td> {{map.country}}</td>
-    Phone no :<td> {{map.phoneno}}</td>
-  </tr>
-
-  <tr>
-    Complainant Number :<td> {{map.complainantNo}}</td>
-    Status :<td> {{map.status}}</td>
-  </tr>
-</table>
     
+<table class="table table-striped table-hover">
+       
+    <tbody>
+        <tr>
+            <td colspan="4" style="text-align: center;">
+              <img src="data:image/gif;base64,{{vic.img}}" alt="photo" style="height: 200px;width: 200px;position: relative;">
+            </td>
+          </tr>
+          
+            <tr>
+                   <td> <h5>Application Number :</h5> </td> <td>{{vic.appNo}} </td>
+    
+                 <td> <h5>   Person Name:</h5></td><td> {{vic.name}} </td>
+    
+                </tr>
+                <tr>
+
+                   <td><h5> Age :</h5> </td><td>{{vic.age}} </td>
+
+                     <td> <h5> Gender :</h5> </td><td>  {{vic.gendor}} </td>
+        
+                    </tr>
+                    <tr>
+                            <td><h5> Height :</h5></td><td>  {{vic.height}} </td>
+        
+                            <td><h5>Blood Group :</h5></td><td>  {{vic.bgrp}} </td>
+                     </tr>
+
+                    <tr>
+                            <td><h5>Date Of Birth :</h5></td><td>  {{vic.dob}} </td>
+            
+                            <td> <h5>Missing Date :</h5></td><td> {{vic.missingDate}} </td>
+            
+                        </tr>
+                        <tr>
+                                <td> <h5>Complainant Number :</h5></td><td> {{vic.complainantNo}} </td>
+                   
+                                <td> <h5> City :</h5> </td><td> {{vic.city}} </td>
+                                 
+                       </tr>
+                       <tr>
+                            <td> <h5>State :</h5> </td><td> {{vic.state}} </td>
+                
+                            <td> <h5>Country :</h5> </td><td> {{vic.country}} </td>
+                   
+                       </tr>
+                       <tr>
+                            <td> <h5>Phone Number : </h5></td><td>  {{vic.phoneno}} </td>
+            
+                            <td> <h5>Status</h5></td><td>  {{vic.status}} </td>
+           
+                       </tr>
+    </tbody>
+</table>
+
+
   </div>
