--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -16,62 +16,53 @@
 </div>
 </div> -->
 
-<div class="container-fluid" style=" width: 96%;
+<div class="container-fluid" style=" width: 100%;
  height: 150px;" >
  <div class="row">
   <div class="col-md-1">
-    <img src="assets/logo.jpg" style="height: 150px;width: 100px;">
+    <img src="assets/logo.jpg" style="height: 150px;width: 120px;">
   </div>
   <div class="col-md-10" style="font-family:'Times New Roman', Times, serif ;">
-    <h1 >Government Of India</h1>
+    <h1 style="font-weight: 600;">NATIONAL HUMAN RIGHTS COMMISSION, INDIA</h1>
     <h2>Human Anti-Trafficking Portal</h2>
   </div>
  </div>
 
 </div>
 <br>
-<nav class="navbar " style="left: 2%; width: 96%;background:lightblue;">
-        <div class="container-fluid">
-           <div class="navbar-header">
-             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>                        
-            </button> 
-          </div> 
+<nav class="navbar " style="left: 2%; width: 97%;background:#0f1629;">
+        
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li class="active"><a routerLink="/home">Home</a></li>
+              <li class="active" style="color: white;"><a routerLink="/home">Home</a></li>
               <li><a routerLink="/gallery">Gallery</a></li>
               <li><a routerLink="/stat">Statistics</a></li>
               <li><a routerLink="/org">Orgnisations</a></li>
               <li><a routerLink="/about">About us</a></li>
             </ul>
             
-          </div>
         </div>
       </nav>
         
       <div class="container-fluid text-center">  
          <div class="row content">
-        <div class="col-md-3 sidenav">
-          
-          <div class="jumbotron" style="text-align: left;">
-            <h2>Helpline</h2>
-            <p> Contacts to be added... </p>
-            </div>
-        </div>
-        <div class="col-md-6 text-left"> 
+      
+        <div class="col-md-9 text-left"> 
             <div class="jumbotron">
                 <div class="container">
                   <h1>Welcome..</h1>
-                  <p style="text-align: justify;"> This portal is help to manage human anti-trafficking
+                  <p style="text-align: justify;"> This portal developed for managing human anti-trafficking
                       cases for police and releated NGO's.  </p>
                     <h3 style="font-weight: 600;"> What is Human Trafficking ?</h3>
-                    <p> ...static data...</p>
+                    <p style="font-size: 15px;"> An estimated 40 million people are in modern slavery all over the world. This generates an estimated $150 billion in illegal profits every year, making forced labor the second largest international crime.
+                        Bonded labour or debt bondage is when a workers’ labor is demanded to repay a loan. The person is usually coerced into working long after the loan is repaid. Often, the debt is passed on to the next generation.</p>
+                       <p style="font-size: 15px;"> Forced labor is any work which people are forced to do against their will. 16 million, or 64% of of people in forced labor are in the private economy, exploited by individuals or enterprises. According to the United Nations International Labour Organization (ILO) there are 24,900,000 people in forced labour.
+                        Child slavery is one of the most shocking forms of slavery. Worldwide it is estimated that that one in four victims of slavery are children. Children’s labour is exploited in many jobs, including physical labor and domestic slavery.
+                        Live-in migrant domestic workers are particularly vulnerable to exploitation because, confined to a private home, they are isolated from protections offered in a regular workplace.
+                        Child marriage can be another form of slavery, if the following three elements are present: if either party hasn’t given their free and informed consent, if either party is being subjected to control and a sense of ownership, and if either party cannot realistically leave or end the marriage. Servile marriage can affect adults too.
+                       </p><p style="font-size: 15px;"> "Human trafficking is the act of recruiting or transferring a person by means of coercion, abduction or deception for the purpose of exploitation. Although most people assume sexual exploitation to be the most common reason for trafficking people, it is in fact for forced labor."</p>
                 </div>
               </div>  
-              <router-outlet></router-outlet>
         </div>
         <div class="col-md-3 ">
           
@@ -103,12 +94,71 @@
         <td ><button type="button" class="btn btn-success " (click)="checkResponseNgo()"style="width: 310px;">Register as Ngo</button></td>
       </tr>
   </table> 
+  <br>
+  <div class="container-fluid" style="width: 100%;">
+      <img src="assets/trafone.jpg" style="height: 320px;width: 310px;">
+      
+  </div>
   </div>
         </div>
       </div>
       </div>
       
-      <footer class="container-fluid text-center">
-        <p>This portal is developed for CDAC project by Vaibhav Aware</p>
-      </footer>
+      <div class="row">
+    
+      <div class="col-md-12">
+          <div class="jumbotron">
+              <div class="container">
+                  <h2 style="font-family:sans-serif;font-weight: 600;">PROJECT ON “STRENGTHENING THE LAW ENFORCEMENT RESPONSE IN INDIA AGAINST
+                     TRAFFICKING IN PERSONS THROUGH TRAINING AND CAPACITY BUILDING”: </h2>
+                     <p></p>
+                     <p style="font-size: 15px;"> The Government of India in the Ministry of Home Affairs, 
+                       in association with the United Nations Office on Drugs and Crime (UNODC) has 
+                       initiated a two year project for training of Law Enforcement Officers on human 
+                       trafficking in four States, namely Maharashtra, Goa, West Bengal and Andhra Pradesh. 
+                       A Project Steering Committee has been constituted for steering, guiding and monitoring
+                        of the project. Through a series of training programmes, the project will raise the 
+                        awareness of Law Enforcement Officers (police & prosecutors) on the problem of human 
+                        trafficking and further build up their capacity to better investigate the crime and 
+                        prosecute the offenders perpetrating such crime. A few Anti Human Trafficking Units 
+                        (AHTUs) are also proposed to be developed or strengthened at the state level in the 
+                        selected states under this project. The primary role of an Anti Human Trafficking Unit 
+                        (AHTU) would be law enforcement and it would liaise with other concerned agencies for
+                         care & rehabilitation of victims.</p>
+                      <p></p>
+                      <br>
+                      <h2 style="font-family:sans-serif;font-weight: 600;">NODAL CELL FOR MONITORING ACTION TO COMBAT HUMAN TRAFFICKING: </h2>
+                      <p style="font-size: 15px;">The Ministry of Home Affairs has set up a Nodal Cell for dealing with matters
+                         relating to trafficking in human beings. The Cell is inter alia responsible 
+                         for collecting and analyzing the data related to trafficking from the State 
+                         Governments/UT Administrations, identifying problem areas and analyzing causes
+                          for their being source/transit/destination areas, monitoring action taken by 
+                          the State Governments/UT Administrations for combating the crime and organizing
+                           co-ordination meetings with the nodal Police Officers of States/UTs. </p>
+                          
+                           <br>
+                     <h2 style="font-family:sans-serif;font-weight: 600;">COMPREHSNSIVE SCHEME "STRENGTHENING LAW ENFORCEMENT RESPONSE IN INDIA AGAINST TRAFFICKING": </h2>
+                     <p  style="font-size: 15px;"> Ministry of Home Affairs has sanctioned a Comprehensive Scheme “Strengthening law enforcement 
+                       response in India against Trafficking in Persons through Training and Capacity Building, where in 
+                       it is proposed to establish 330 Anti Human Trafficking Units (AHTUs ) throughout the country and 
+                       impart training to 10.000 police officers through Training of Trainers ( TOTs) component. 
+                       Ministry of Home Affairs has released funds as first installment for the year 2020-21 amounting to
+                        Rs. 8.72 crores to all the State Governments for establishment of 115 Anti Human Trafficking Units.
+                         All the States have received funds and are in the process of setting up of AHTUs. 85 Units have 
+                         already been set up. Funds are being released for setting up 110 units in the financial Year 2020-2021.</p>
+            </div>  
+            </div>
 
+      </div>
+      
+      </div>
+
+      <div class="row" style="background: #051e2e;">
+          <div class="col-md-12">
+              <footer class="container-fluid text-center">
+                  <p style="color: white;">This portal is developed for CDAC project by Vaibhav Aware</p>
+              </footer>            
+          </div>  
+          </div>
+    
+  
