--- a/src/app/home/org/org.component.html
+++ b/src/app/home/org/org.component.html
@@ -1,1 +1,36 @@
-<h1> List of all the NGO's which are working for Human Trafficking Victims to be added Soon</h1>
+<div class="row" >
+        <div class="col-md-12">
+                <img src="assets/traftwo.jpg" style="height: 320px;width: 450px;">
+                <img src="assets/traffour.jpg" style="height: 320px;width: 450px;">
+                <img src="assets/trafthree.jpg" style="height: 320px;width: 450px;">
+            </div>
+</div>
+<div class="row">
+        <div class="col-md-12">
+             <div class="jumbotron">
+                <div class="container">
+                    <h3 style="font-weight: 200;">    Rescue is the right of every victim. It is a paramount duty of both state
+                         and non-state partners to strive towards removing every victim from places 
+                         of exploitation. Unfortunately only 7% of the victims get ever rescued.
+                           More than 93% of the victims continue to languish in slavery like conditions for years together and die succumbing to various diseases.</h3>
+                     <h2 style="font-weight: 400;"> Here Are Some NGO's which are helping Human Trafficking Victims</h2> 
+                     <br>
+                     <br>
+                     <h2 style="font-weight: 600;"> 1.Prajwala </h2>  
+
+                     <p style="font-size: 20px;">
+                            Prajwala is a pioneering anti-trafficking organization working on the issue of sex trafficking and sex crime. Established in the year 1996 in South India, 
+                            Prajwala has pan India and International operations. Prajwala works on the five pillars of Prevention, Protection, Rescue, Rehabilitation & Reintegration. In the last one decade it has become one
+                             of the most powerful voices nationally and globally for ensuring holistic victim services.
+                     </p>  
+                        </div>
+                      </div>  
+              </div>
+</div>
+<div class="row">
+<div class="col-md-12" style="text-align: center;">
+
+<button type="button" class="btn btn-success" (click)="Home()">BACK TO HOME</button>
+
+</div>
+</div>
