--- a/src/app/home/stat/stat.component.html
+++ b/src/app/home/stat/stat.component.html
@@ -1,1 +1,23 @@
-<h1> Statistics about lost and found to be addded soon . .</h1>
+<!-- <h1> Statistics about lost and found to be addded soon . .</h1>
+<div id="chartContainer" style="width: 100%; height: 400px;"></div> -->
+<!--The content below is only a placeholder and can be replaced.-->
+<!-- <link rel="stylesheet" href="https://canvasjs.com/demo/dashboards/assets/bootstrap/bootstrap4-alpha3.min.css"> -->
+
+<div class="container">
+	<h2 id="header">
+		<strong>Statistics Of People Missing Vs Found</strong>
+	</h2>
+	
+	<div class="row m-b-1">
+		<div class="col-xs-12">
+			<div class="card shadow">
+				<div class="card-block">
+					<div id="missing-chart"></div>
+				</div>
+			</div>
+		</div>
+	</div> <!-- row -->
+
+	
+	</div> <!-- row -->
+<!-- container -->
