--- a/src/app/ngo/ngoreg/ngoreg.component.html
+++ b/src/app/ngo/ngoreg/ngoreg.component.html
@@ -88,7 +88,11 @@
         <label for="">Country</label>
         <input [(ngModel)]="god.country" type="text" class="form-control">
       </div>
-         
+      <div class="form-group">
+        <label for="Profile Picture"><b>Profile Picture</b></label>
+       <input (change)="onSelectFile($event)" style="border: none;color: brown;" type="file" class="form-control">
+
+       </div>     
    
   </div>
   <div class="col-md-5">
