--- a/src/app/admin/adduser/adduser.component.html
+++ b/src/app/admin/adduser/adduser.component.html
@@ -72,7 +72,11 @@
           <label for="">Password</label>
           <input [(ngModel)]="god.password" type="password" class="form-control">
         </div>
-  
+        <div class="form-group">
+          <label for="Profile Picture"><b>Profile Picture</b></label>
+         <input (change)="onSelectFile($event)" style="border: none;color: brown;" type="file" class="form-control">
+ 
+         </div>
   </div>
 </div>
 <div class="col-md-9">
