--- a/src/app/admin/request/request.component.html
+++ b/src/app/admin/request/request.component.html
@@ -49,6 +49,12 @@
     <table class="table table-striped table-hover">
            
             <tbody>
+
+                    <tr>
+                            <td colspan="2" style="text-align: center;">
+                              <img src="data:image/gif;base64,{{god.img}}" alt="photo" style="height: 200px;width: 200px;position: relative;">
+                            </td>
+                      </tr>
                     <tr>
                         <td>
                             <h4> User Id </h4>
