--- a/src/app/admin/searchuser/searchuser.component.html
+++ b/src/app/admin/searchuser/searchuser.component.html
@@ -13,6 +13,11 @@
        
         <tbody>
                 <tr>
+                        <td colspan="2" style="text-align: center;">
+                          <img src="data:image/gif;base64,{{god.img}}" alt="photo" style="height: 200px;width: 200px;position: relative;">
+                        </td>
+                  </tr>
+                <tr>
                     <td>
                         <h4> User Id </h4>
                     </td>
