--- a/src/app/ngo/ngcases/ngcases.component.html
+++ b/src/app/ngo/ngcases/ngcases.component.html
@@ -1,27 +1,32 @@
 <h1>List Of Missing Persons</h1>
 <br>
     
-  <div class="table-responsive">
+  <div class="table-responsive" style="text-align: left;">
     
-  <table class="table table-striped " style="text-align: left;">
-          <thead>
-              <tr>
-                  <th> Id</th>
-                  <th> Name</th>
-                  <th> Date Of Birth</th>
-                  <th> Age</th> 
-                  <th> Image </th>
-              </tr>
-          </thead>
-          <tbody>
-              <tr *ngFor="let m of map">
-                  <td> {{m.appNo}}</td>
-                  <td> {{m.name}}</td>
-                  <td> {{m.dob}}</td>
-                  <td> {{m.age}} </td>
-                  <td> {{m.img}} </td>
-             </tr>
-          </tbody>
-      </table>
-      
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th> Id</th>
+                <th> Name</th>
+                <th> Date Of Birth</th>
+                <th> Age</th>                
+                <th> Missing Date</th>  
+                <th> City </th> 
+                <th> Image </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let m of map">
+                <td> {{m.appNo}}</td>
+                <td> {{m.name}}</td>
+                <td> {{m.dob}}</td>
+                <td> {{m.age}} </td>
+                <td> {{m.missingDate}}</td>
+                <td> {{m.city}}</td>
+
+                <td> <img src="data:image/gif;base64,{{m.img}}" alt="photo" style="height: 100px;width: 100px;">  </td>
+
+            </tr>
+        </tbody>
+    </table>
   </div>
