--- a/src/app/ngo/ngsearch/ngsearch.component.html
+++ b/src/app/ngo/ngsearch/ngsearch.component.html
@@ -1,5 +1,5 @@
 <h1>Search Missing Victim</h1>
-<div class="form-group">
+<div class="form-group" style="text-align: left;">
     <label for="Name" >Name</label>
     <input type="text" class="form-control" id="name" name="name" placeholder="enter name of missing person"
     [(ngModel)]="name" required    >
@@ -8,54 +8,60 @@
 <br>
 <br>
 <div class="table-responsive" id="myDiv">
+  <table class="table table-striped table-hover">
+     
+  <tbody>
+    <tr>
+        <td colspan="4" style="text-align: center;">
+          <img src="data:image/gif;base64,{{vic.img}}" alt="photo" style="height: 200px;width: 200px;position: relative;">
+        </td>
+      </tr>
+      
+        <tr>
+               <td> <h5>Application Number :</h5> </td> <td>{{vic.appNo}} </td>
+
+             <td> <h5>   Person Name:</h5></td><td> {{vic.name}} </td>
+
+            </tr>
+            <tr>
+
+               <td><h5> Age :</h5> </td><td>{{vic.age}} </td>
+
+                 <td> <h5> Gender :</h5> </td><td>  {{vic.gendor}} </td>
     
-<table class="table table-striped table-hover">
-       
-        <tbody>
+                </tr>
                 <tr>
-                       <td> <h5>Application Number :</h5> {{vic.appNo}} </td>
+                        <td><h5> Height :</h5></td><td>  {{vic.height}} </td>
+    
+                        <td><h5>Blood Group :</h5></td><td>  {{vic.bgrp}} </td>
+                 </tr>
+
+                <tr>
+                        <td><h5>Date Of Birth :</h5></td><td>  {{vic.dob}} </td>
         
-                     <td> <h5>   Person Name:</h5>  {{vic.name}} </td>
+                        <td> <h5>Missing Date :</h5></td><td> {{vic.missingDate}} </td>
         
                     </tr>
                     <tr>
-
-                       <td><h5> Age :</h5> {{vic.age}} </td>
-
-                         <td> <h5> Gender :</h5>  {{vic.gendor}} </td>
-            
-                        </tr>
-                        <tr>
-                                <td><h5> Height :</h5> {{vic.height}} </td>
-            
-                                <td><h5>Blood Group :</h5> {{vic.bgrp}} </td>
-                         </tr>
-
-                        <tr>
-                                <td><h5>Date Of Birth :</h5> {{vic.dob}} </td>
-                
-                                <td> <h5>Missing Date :</h5>{{vic.missingDate}} </td>
-                
-                            </tr>
-                            <tr>
-                                    <td> <h5>Complainant Numbre :</h5>{{vic.complainantNo}} </td>
-                       
-                                    <td> <h5> City :</h5> {{vic.city}} </td>
-                                     
-                           </tr>
-                           <tr>
-                                <td> <h5>State :</h5> {{vic.state}} </td>
-                    
-                                <td> <h5>Country :</h5> {{vic.country}} </td>
-                       
-                           </tr>
-                           <tr>
-                                <td> <h5>Phone Number : </h5> {{vic.phoneno}} </td>
-                
-                                <td> <h5>Status</h5> {{vic.status}} </td>
+                            <td> <h5>Complainant Number :</h5></td><td> {{vic.complainantNo}} </td>
                
-                           </tr>
-        </tbody>
-    </table>
+                            <td> <h5> City :</h5> </td><td> {{vic.city}} </td>
+                             
+                   </tr>
+                   <tr>
+                        <td> <h5>State :</h5> </td><td> {{vic.state}} </td>
+            
+                        <td> <h5>Country :</h5> </td><td> {{vic.country}} </td>
+               
+                   </tr>
+                   <tr>
+                        <td> <h5>Phone Number : </h5></td><td>  {{vic.phoneno}} </td>
+        
+                        <td> <h5>Status</h5></td><td>  {{vic.status}} </td>
+       
+                   </tr>
+</tbody>
+</table>
+
     
 </div>
