--- a/src/app/police/regcase/regcase.component.html
+++ b/src/app/police/regcase/regcase.component.html
@@ -32,7 +32,7 @@
         </div>
        <div class="form-group">
          <label for="Profile Picture"><b>Profile Picture</b></label>
-        <input (change)="onSelectFile($event)" style="border: none" type="file" class="form-control">
+        <input (change)="onSelectFile($event)" style="border: none;color: brown;" type="file" class="form-control">
 
         </div>
      
