--- a/src/app/admin/adduser/adduser.component.html
+++ b/src/app/admin/adduser/adduser.component.html
@@ -1,7 +1,8 @@
-<h1 style="text-align: center ;color: crimson;">User Registeration Form</h1>
+<h1 style="text-align: center ;color:black;">User Registeration Form</h1>
 
 <div class="row" >
-  <div class="col-md-5">
+  <div class="col-md-2"></div>
+  <div class="col-md-5" style="text-align: left;">
     <div class="form-group">
       <label for="">Full Name</label>
       <input [(ngModel)]="god.name" type="text" class="form-control">
@@ -46,7 +47,7 @@
          
    
   </div>
-  <div class="col-md-4">
+  <div class="col-md-4" style="text-align: left;">
    
     <div class="form-group">
         <label for="">Department Name</label>
@@ -79,7 +80,7 @@
          </div>
   </div>
 </div>
-<div class="col-md-9">
+<div class="col-md-12">
   <div class="form-group" style="text-align: center;">
     <button style="width: 100px;" (click)="onRegister()" class="btn btn-success">Register</button>
   </div>
