--- a/src/app/home/aboutus/aboutus.component.html
+++ b/src/app/home/aboutus/aboutus.component.html
@@ -1,1 +1,36 @@
-<h1>About Us</h1>
+<div class="row">
+
+        <div class="col-md-1"></div>
+    <div class="col-md-10">
+        
+        <div class="jumbotron">
+            <div class="container">
+                <h1>Hello,</h1>
+                <h3>
+                    I am Vaibhav Aware studying Post Graduate Diploma In Advanced Computing in Sunbeam and 
+                    this portal is devloped as CDAC project.   
+                </h3>
+              
+            </div>
+        </div>
+        
+    </div>
+</div>
+<br>
+<br><br><br><br><br><br><br><br>
+<div class="row" style="text-align: center;">
+        <div class="col-md-12"> 
+            
+            <button type="button" class="btn btn-success" (click)="Home()">GO BACK HOME</button>
+            
+        </div>
+            </div>
+            <br>
+            <div class="row" style="background: #051e2e;">
+                    <div class="col-md-12">
+                        <footer class="container-fluid text-center">
+                            <p style="color: white;">This portal is developed for CDAC project by Vaibhav Aware</p>
+                        </footer>            
+                    </div>  
+                    </div>
+              
