--- a/src/app/home/org/org.component.html
+++ b/src/app/home/org/org.component.html
@@ -13,16 +13,90 @@
                          and non-state partners to strive towards removing every victim from places 
                          of exploitation. Unfortunately only 7% of the victims get ever rescued.
                            More than 93% of the victims continue to languish in slavery like conditions for years together and die succumbing to various diseases.</h3>
-                     <h2 style="font-weight: 400;"> Here Are Some NGO's which are helping Human Trafficking Victims</h2> 
+                     <h2 style="font-weight: 400;"> Here Are Some Organizations which are helping Human Trafficking Victims</h2> 
                      <br>
                      <br>
-                     <h2 style="font-weight: 600;"> 1.Prajwala </h2>  
+                     <h2 style="font-weight: 600;"> 1. Prajwala </h2>  
 
                      <p style="font-size: 20px;">
                             Prajwala is a pioneering anti-trafficking organization working on the issue of sex trafficking and sex crime. Established in the year 1996 in South India, 
                             Prajwala has pan India and International operations. Prajwala works on the five pillars of Prevention, Protection, Rescue, Rehabilitation & Reintegration. In the last one decade it has become one
                              of the most powerful voices nationally and globally for ensuring holistic victim services.
                      </p>  
+                        <div class="container-fluid" style="text-align: center;">
+                                <img src="assets/trafseven.jpg" style="height: 320px;width: 550px;">
+                        </div>  
+                        <br>
+                        <br>
+                        <h2 style="font-weight: 600;"> 2. Impulse NGO Network  </h2>  
+                        <p style="font-size: 20px;">
+                                the Impulse NGO Network (INGON) has been battling the scourge of human trafficking
+                                 in the Northeast for more than two decades, and has saved approximately 72,442 
+                                 people and empowered over 30,000 women artisans.  With the application of provisions under Indian law, INGON developed what’s today known as Meghalaya Model and 
+                                 presently the Impulse Model.
+                          </p>
+                          <div class="container-fluid" style="text-align: center;">
+                                <img src="assets/traf8.jpeg" style="height: 350px;width: 600px;">
+                         </div>  
+                         <br>
+                         <h3 style="font-weight: 600;">
+                                So, what is the Impulse Model?
+                         </h3>
+                                <p style="font-size: 20px;">
+                                “It is a case management system which follows the route of what is popularly known as 
+                                the 6Rs (Reporting, Rescue, Rehabilitation, Repatriation, Re-integration and Re-compensation) 
+                                and the 6Ps (Partnership, Prevention, Protection, Policing, Press and Prosecution).
+                                 We wanted the Impulse Model to be a single-window platform. So, we formed the Impulse Case 
+                                 Info Centre (ICIC), which records, compiles, and keeps track of all relevant information on 
+                                 human trafficking cases, adhering to the 6 R’s of the Impulse Model formula of 6R + 6P."     
+                         </p>
+                            <br>
+                            <br>
+                            <h2 style="font-weight: 600;"> 3. Rescue Foundation  </h2>  
+                            <p style="font-size: 20px;">
+                                Established in 2000 by the late Balkrishna Acharya, Rescue Foundation is now managed by his wife Triveni, and is a non-profit, 
+                                government-recognized and registered NGO working to fulfill its duties to this most neglected segment of our society. Our primary aim is to ensure that women’s human rights
+                                 are respected, protected, and fulfilled. On an average, our organization helps rescue 300 girls a year. We make sure that after rescue, these women and girls live a life of dignity 
+                                 for which we try to give them necessary training in various vocations and life skills.  
+                            </p>
+                              <div class="container-fluid" style="text-align: center;">
+                                    <img src="assets/trafnine.png" style="height: 350px;width: 600px;">
+                            </div>  
+                                <br>
+                                <br>
+                                <h2 style="font-weight: 600;"> 4. Prerana  </h2>  
+                                <p style="font-size: 20px;">
+                                        Prerana works to end intergenerational prostitution and to protect women and children from the threats of human trafficking
+                                         by defending their rights and dignity, providing a safe environment, supporting their education and health and leading major advocacy efforts.
+                                          Prerana strives to ensure optimum protection of children. This is reflected in the broad spectrum of interventions that provide a continuum 
+                                          of care by addressing issues of child sexual abuse in parallel with anti-human trafficking. 
+                                          Since its establishment in 1986, Prerana’s pioneering efforts have been instrumental in supporting 
+                                          victims through the entire cycle from prevention to repatriation.
+
+                                 </p>
+                                  <div class="container-fluid" style="text-align: center;">
+                                        <img src="assets/traf10.png" style="height: 350px;width: 400px;">
+                                </div> 
+                                <br>
+                                <br>
+                                <h2 style="font-weight: 600;"> 5. Human Rights Lan Network (HRLN) </h2>  
+                                <p style="font-size: 20px;">
+                                        An anti-trafficking initiative was established by HRLN to file Public Interest Cases in the Supreme Court of India and various 
+                                        High Courts on issues affecting children. The Anti-Trafficking Initiative(ATI) provides pro-bono legal
+                                         services to women and children who are trafficked, and to represent children and women who are
+                                          victims of sexual abuse or bonded labour during the trial proceedings in trial courts.
+                                </p>
+                                <p style="font-size: 20px;">
+                                        ATI conducts fact-finding missions, campaigns, and raises awareness through ‘Know our Rights publications.
+                                         It also organizes consultations, meetings and legal trainings for increasing awareness about 
+                                         trafficking among duty bearers and right holders. HRLN is also a part of the Special Task force 
+                                         for the rescue and rehabilitation of trafficked child labourers and responds to crisis situations
+                                          through raid and rescue operations.
+                                 </p>
+                                  <div class="container-fluid" style="text-align: center;">
+                                        <img src="assets/traf11.png" style="height: 320px;width: 430px;">
+                                </div>
+
                         </div>
                       </div>  
               </div>
@@ -34,3 +108,12 @@
 
 </div>
 </div>
+<br>
+<div class="row" style="background: #051e2e;">
+        <div class="col-md-12">
+            <footer class="container-fluid text-center">
+                <p style="color: white;">This portal is developed for CDAC project by Vaibhav Aware</p>
+            </footer>            
+        </div>  
+        </div>
+  
