--- a/src/app/home/stat/stat.component.html
+++ b/src/app/home/stat/stat.component.html
@@ -21,3 +21,11 @@
 	
 	</div> <!-- row -->
 <!-- container -->
+<br><br><br><br><br><br>
+<div class="row" style="text-align: center;">
+        <div class="col-md-12"> 
+            
+            <button type="button" class="btn btn-success" (click)="Home()">GO BACK HOME</button>
+            
+        </div>
+  </div>
