--- a/src/app/ngo/ngcases/ngcases.component.html
+++ b/src/app/ngo/ngcases/ngcases.component.html
@@ -1,5 +1,11 @@
-<h1>List Of Missing Persons</h1>
-<br>
+<div class="row" style="background:#193815;color: white;">
+    <div class="col-md-12">
+    <div class="form-group" style="text-align: center;">
+        <h1 style="text-align: center"> Missing Persons</h1>
+  </div>
+  </div>
+  </div>
+  <br>
     
   <div class="table-responsive" style="text-align: left;">
     
