--- a/src/app/ngo/ngohome/ngohome.component.html
+++ b/src/app/ngo/ngohome/ngohome.component.html
@@ -1,17 +1,14 @@
-<div class="col-md-3">
-    <div class="jumbotron" style="text-align: left;">
-        <h2>News</h2>
-        <p> Contents to be added... </p>
+<div class="row">
+  <div class="col-md-12"> 
+    <div class="jumbotron">
+        <div class="container">
+          <h1>Welcome, {{name}}</h1>
+          <h3 style="text-align: justify;"> This portal is devloped for managing human anti-trafficking
+              cases for police and releated Non Government Orgnizations </h3>
+            <br> 
+              <div class="container-fluid" style="text-align: center;">
+                <img src="assets/trafthree.jpg" style="height: 320px;width: 550px;">
+            </div>   
         </div>
-    
+      </div>
 </div>
-<div class="col-md-8"> 
-<div class="jumbotron">
-    <div class="container">
-      <h1>Welcome to NGO Home</h1>
-      <p style="text-align: justify;"> This portal is help to manage human anti-trafficking
-          cases for police and releated NGO's.  </p>
-        <h3 style="font-weight: 600;"> What is Human Trafficking ?</h3>
-        <p> ...static data...</p>
-    </div>
-  </div>
