--- a/src/app/ngo/ngsearch/ngsearch.component.html
+++ b/src/app/ngo/ngsearch/ngsearch.component.html
@@ -1,4 +1,11 @@
-<h1>Search Missing Victim</h1>
+<div class="row" style="background: #193815;color: white;">
+  <div class="col-md-12">
+  <div class="form-group" style="text-align: center;">
+      <h1 style="text-align: center">Search Missing Person</h1>
+</div>
+</div>
+</div>
+<br>
 <div class="form-group" style="text-align: left;">
     <label for="Name" >Name</label>
     <input type="text" class="form-control" id="name" name="name" placeholder="enter name of missing person"
