--- a/src/app/ngo/ngupdate/ngupdate.component.html
+++ b/src/app/ngo/ngupdate/ngupdate.component.html
@@ -1,4 +1,11 @@
-<h1 style="text-align: center"> Update Profile </h1>
+<div class="row" style="background: #193815;color: white;">
+    <div class="col-md-12">
+    <div class="form-group" style="text-align: center;">
+        <h1 style="text-align: center">Update Profile</h1>
+  </div>
+  </div>
+  </div>
+  <br>
 
 <div class="row" >
     <div class="col-md-3"></div>
