--- a/src/app/police/police/police.component.html
+++ b/src/app/police/police/police.component.html
@@ -1,9 +1,11 @@
 <div class="jumbotron">
     <div class="container">
-      <h1>Welcome to Police Home</h1>
-      <p style="text-align: justify;"> This portal is help to manage human anti-trafficking
-          cases for police and releated NGO's.  </p>
-        <h3 style="font-weight: 600;"> What is Human Trafficking ?</h3>
-        <p> ...static data...</p>
+      <h1>Welcome, {{name}}</h1>
+      <h2 style="font-weight: 500;"> 
+        This portal is help to manage human anti-trafficking
+          cases for police and releated NGO's.  </h2>
+        <p>    
+           <img src="assets/traf13.png" style="height: 450px;width: 700px;">
+        </p>
     </div>
  </div>
