--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -1,10 +1,19 @@
+<br>
+<div class="container-fluid" style=" width: 100%;height: 150px;" >
+  <div class="row">
+   <div class="col-md-2">
+     <img src="assets/logo.jpg" style="height: 150px;width: 150px;">
+   </div>
+   <div class="col-md-9" style="font-family:'Times New Roman', Times, serif ;">
+     <h1 style="font-weight: 600;">NATIONAL HUMAN RIGHTS COMMISSION, INDIA</h1>
+     <h2>Human Anti-Trafficking Portal</h2>
+   </div>
+   <div class="col-md-1">
 
-<div class="row" style="height: 70px;">
-  <div class="col-md-12">
-    <h1>Admin Home</h1>
-      <input type="button" class="btn btn-danger" value="logout" (click)="logout()" 
-      style="position: absolute; top: 30px;left: 1200px;" >       
+   </div>
+   <input type="button" class="btn btn-danger" value="logout" (click)="logout()">
   </div>
+  
  </div>
 <br>
 <nav class="navbar navbar-inverse" style="left: 2%; width: 96%;">
@@ -27,25 +36,20 @@
         
       <div class="container-fluid text-center">    
         <div class="row content">
-          <div class="col-md-3 sidenav">
-            
-            <div class="jumbotron" style="text-align: left;">
-              <h2>News</h2>
-              <p> Contents to be added... </p>
-              </div>
-          </div>
-          <div class="col-md-9 text-left"> 
+          <div class="col-md-12 ">
               <router-outlet></router-outlet>
             </div>
+        </div>
+      </div>
             
-  <div class="row">
-  <div class="col-md-12">
-    <footer class="container-fluid text-center">
-        <p>This portal is developed under CDAC project by Vaibhav Aware</p>
-      </footer>
-
-  </div>
-</div>
+            <div class="row" style="background: black;">
+                <div class="col-md-12">
+                    <footer class="container-fluid text-center">
+                        <p style="color: white;">This portal is developed for CDAC project by Vaibhav Aware</p>
+                    </footer>            
+                </div>  
+                </div>
+      
       
 
 
