--- a/src/app/admin/admininbox/admininbox.component.html
+++ b/src/app/admin/admininbox/admininbox.component.html
@@ -1,16 +1,21 @@
 <h1>List Of all Messages Received</h1>
 
-<div class="table-responsive" style="width:700px">
-    <table class="table table-striped">
-    <tr>
-            <th> Messages </th>
-    </tr>
-    <tr *ngFor="let msgs of msglist">
-        <td>
-            <div class="container-fluid">        
-                <textarea name="msg" id="input" class="form-control" rows="5">{{msgs.msg}}</textarea>   
-            </div>
-        </td>
-    </tr>
-    </table>
+<div class="row">
+<div class="col-md-2"></div>
+<div class="col-md-9">
+        <div class="table-responsive" style="width:700px">
+                <table class="table table-striped">
+                <tr>
+                        <th> Messages </th>
+                </tr>
+                <tr *ngFor="let msgs of msglist">
+                    <td>
+                        <div class="container-fluid">        
+                            <textarea name="msg" id="input" class="form-control" rows="5">{{msgs.msg}}</textarea>   
+                        </div>
+                    </td>
+                </tr>
+                </table>
+            </div>    
+</div>    
 </div>
