--- a/src/app/admin/allcases/allcases.component.html
+++ b/src/app/admin/allcases/allcases.component.html
@@ -3,7 +3,7 @@
     
   <div class="table-responsive">
     
-  <table class="table table-striped table-hover">
+  <table class="table table-striped table-hover" style="text-align: left;">
           <thead>
               <tr>
                   <th> Id</th>
