--- a/src/app/admin/request/request.component.html
+++ b/src/app/admin/request/request.component.html
@@ -1,193 +1,205 @@
 <h1>New Requests</h1>
-<div class="table-responsive">
+<div class="row">
+    <div class="col-md-12">
+            <div class="table-responsive">
     
-    <table class="table table-striped table-hover">
-        <thead>
-            <tr>
-                <th> Id</th>
-                <th> Name  </th>
-                <th> Role  </th>
-                <th> Email </th>
-                <th> View Details </th>
-                <th> Verify </th>
-                <th> Reject </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let user of userlist">
-                <td> {{user.uid}}</td>
-
-                <td> {{user.name}}</td>
-
-                <td> {{user.role}}</td>
-
-                <td> {{user.email}} </td>
-                <td> 
-                    
-                    <button style="width:100px" type="button" class="btn btn-success" (click)="ViewDetails(user.uid)">View Details</button>
-                       
-                   </td>
-                <td> 
-                    
-                 <button style="width:100px" type="button" class="btn btn-success" (click)="Verify(user.uid)">Verify</button>
-                    
-                </td>
-                <td> 
-                    
-                    <button style="width:100px" type="button" class="btn btn-danger" (click)="Reject(user.uid)">Reject</button>
-                       
-                   </td>
+                    <table class="table table-striped table-hover" style="text-align: left;">
+                        <thead>
+                            <tr>
+                                <th> Id</th>
+                                <th> Name  </th>
+                                <th> Role  </th>
+                                <th> Email </th>
+                                <th> View Details </th>
+                                <th> Verify </th>
+                                <th> Reject </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let user of userlist">
+                                <td> {{user.uid}}</td>
                 
-             </tr>
-        </tbody>
-    </table>
-    
+                                <td> {{user.name}}</td>
+                
+                                <td> {{user.role}}</td>
+                
+                                <td> {{user.email}} </td>
+                                <td> 
+                                    
+                                    <button style="width:100px" type="button" class="btn btn-success" (click)="ViewDetails(user.uid)">View Details</button>
+                                       
+                                   </td>
+                                <td> 
+                                    
+                                 <button style="width:100px" type="button" class="btn btn-success" (click)="Verify(user.uid)">Verify</button>
+                                    
+                                </td>
+                                <td> 
+                                    
+                                    <button style="width:100px" type="button" class="btn btn-danger" (click)="Reject(user.uid)">Reject</button>
+                                       
+                                   </td>
+                                
+                             </tr>
+                        </tbody>
+                    </table>
+                    
+                </div>
+                
+    </div>
 </div>
 <br>
-<div class="table-responsive" id="myDiv">
+<div class="row">
+    <div class="col-md-2"></div>
+        <div class="col-md-8">
+                <div class="table-responsive" id="myDiv">
     
-    <table class="table table-striped table-hover">
-           
-            <tbody>
+                        <table class="table table-striped table-hover" >
+                               
+                                <tbody>
+                    
+                                        <tr>
+                                                <td colspan="2" style="text-align: center;">
+                                                  <img src="data:image/gif;base64,{{god.img}}" alt="photo" style="height: 200px;width: 200px;position: relative;">
+                                                </td>
+                                          </tr>
+                                        <tr>
+                                            <td>
+                                                <h4> User Id </h4>
+                                            </td>
+                                            <td>
+                                                {{god.uid}}
+                                            </td>
+                                        </tr>
+                        
+                                        <tr>
+                                                <td>
+                                                    <h4> User Name </h4>
+                                                </td>
+                                                <td>
+                                                    {{god.name}}
+                                                </td>
+                                            </tr>
+                        
+                                        <tr>
+                                                <td>
+                                                    <h4> User Email </h4>
+                                                </td>
+                                                <td>
+                                                    {{god.email}}
+                                                </td>
+                                            </tr>
+                        
+                                        <tr>
+                                                <td>
+                                                    <h4> User Role </h4>
+                                                </td>
+                                                <td>
+                                                    {{god.role}}
+                                                </td>
+                                            </tr>
+                        
+                                        <tr>
+                                                <td>
+                                                    <h4> User Verification Status </h4>
+                                                </td>
+                                                <td>
+                                                    {{god.stat}}
+                                                </td>
+                                            </tr>
+                        
+                                        <tr>
+                                                <td>
+                                                    <h4> User City </h4>
+                                                </td>
+                                                <td>
+                                                    {{god.city}}
+                                                </td>
+                                            </tr>
+                        
+                                        <tr>
+                                                <td>
+                                                    <h4> User State </h4>
+                                                </td>
+                                                <td>
+                                                    {{god.state}}
+                                                </td>
+                                            </tr>
+                        
+                                        <tr>
+                                                <td>
+                                                    <h4> User Country </h4>
+                                                </td>
+                                                <td>
+                                                    {{god.country}}
+                                                </td>
+                                            </tr>
+                        
+                                        <tr>
+                                                <td>
+                                                    <h4> User Phone No </h4>
+                                                </td>
+                                                <td>
+                                                    {{god.phoneno}}
+                                                </td>
+                                            </tr>
+                        
+                                        <tr>
+                                              <td colspan="2">
+                                                 <h2>  Department Information </h2>
+                                                </td>
+                                        </tr>
+                        
+                                        <tr>
+                                                <td>
+                                                    <h4> Department Name </h4>
+                                                </td>
+                                                <td>
+                                                    {{god.deptname}}
+                                                </td>
+                                            </tr>
+                        
+                                        <tr>
+                                                <td>
+                                                    <h4> Department City </h4>
+                                                </td>
+                                                <td>
+                                                    {{god.deptcity}}
+                                                </td>
+                                            </tr>
+                        
+                                        <tr>
+                                                <td>
+                                                    <h4> Department State </h4>
+                                                </td>
+                                                <td>
+                                                    {{god.deptstate}}
+                                                </td>
+                                            </tr>
+                        
+                                        <tr>
+                                                <td>
+                                                    <h4> Department Country </h4>
+                                                </td>
+                                                <td>
+                                                    {{god.deptcountry}}
+                                                </td>
+                                            </tr>
+                        
+                                        <tr>
+                                                <td>
+                                                    <h4> Department Contact No </h4>
+                                                </td>
+                                                <td>
+                                                    {{god.deptphoneno}}
+                                                </td>
+                                            </tr>
+                        
+                                </tbody>
+                            </table>
+                            
+                        </div>       
+        </div>
 
-                    <tr>
-                            <td colspan="2" style="text-align: center;">
-                              <img src="data:image/gif;base64,{{god.img}}" alt="photo" style="height: 200px;width: 200px;position: relative;">
-                            </td>
-                      </tr>
-                    <tr>
-                        <td>
-                            <h4> User Id </h4>
-                        </td>
-                        <td>
-                            {{god.uid}}
-                        </td>
-                    </tr>
-    
-                    <tr>
-                            <td>
-                                <h4> User Name </h4>
-                            </td>
-                            <td>
-                                {{god.name}}
-                            </td>
-                        </tr>
-    
-                    <tr>
-                            <td>
-                                <h4> User Email </h4>
-                            </td>
-                            <td>
-                                {{god.email}}
-                            </td>
-                        </tr>
-    
-                    <tr>
-                            <td>
-                                <h4> User Role </h4>
-                            </td>
-                            <td>
-                                {{god.role}}
-                            </td>
-                        </tr>
-    
-                    <tr>
-                            <td>
-                                <h4> User Verification Status </h4>
-                            </td>
-                            <td>
-                                {{god.stat}}
-                            </td>
-                        </tr>
-    
-                    <tr>
-                            <td>
-                                <h4> User City </h4>
-                            </td>
-                            <td>
-                                {{god.city}}
-                            </td>
-                        </tr>
-    
-                    <tr>
-                            <td>
-                                <h4> User State </h4>
-                            </td>
-                            <td>
-                                {{god.state}}
-                            </td>
-                        </tr>
-    
-                    <tr>
-                            <td>
-                                <h4> User Country </h4>
-                            </td>
-                            <td>
-                                {{god.country}}
-                            </td>
-                        </tr>
-    
-                    <tr>
-                            <td>
-                                <h4> User Phone No </h4>
-                            </td>
-                            <td>
-                                {{god.phoneno}}
-                            </td>
-                        </tr>
-    
-                    <tr>
-                          <td colspan="2">
-                             <h2>  Department Information </h2>
-                            </td>
-                    </tr>
-    
-                    <tr>
-                            <td>
-                                <h4> Department Name </h4>
-                            </td>
-                            <td>
-                                {{god.deptname}}
-                            </td>
-                        </tr>
-    
-                    <tr>
-                            <td>
-                                <h4> Department City </h4>
-                            </td>
-                            <td>
-                                {{god.deptcity}}
-                            </td>
-                        </tr>
-    
-                    <tr>
-                            <td>
-                                <h4> Department State </h4>
-                            </td>
-                            <td>
-                                {{god.deptstate}}
-                            </td>
-                        </tr>
-    
-                    <tr>
-                            <td>
-                                <h4> Department Country </h4>
-                            </td>
-                            <td>
-                                {{god.deptcountry}}
-                            </td>
-                        </tr>
-    
-                    <tr>
-                            <td>
-                                <h4> Department Contact No </h4>
-                            </td>
-                            <td>
-                                {{god.deptphoneno}}
-                            </td>
-                        </tr>
-    
-            </tbody>
-        </table>
-        
+    <div class="col-md-2"></div>
     </div>
