--- a/src/app/admin/searchpc/searchpc.component.html
+++ b/src/app/admin/searchpc/searchpc.component.html
@@ -1,5 +1,5 @@
 <h1>Search Missing Victim</h1>
-<div class="form-group">
+<div class="form-group" style="text-align: left;">
     <label for="Name" >Name</label>
     <input type="text" class="form-control" id="name" name="name" placeholder="enter name of missing person"
     [(ngModel)]="name" required    >
