--- a/src/app/admin/searchuser/searchuser.component.html
+++ b/src/app/admin/searchuser/searchuser.component.html
@@ -1,5 +1,5 @@
 <h1>Search User</h1>
-<div class="form-group">
+<div class="form-group" style="text-align: left;">
     <label for="Email" >Email</label>
     <input type="text" class="form-control" id="email" name="email" placeholder="enter email of user"
     [(ngModel)]="email" required    >
