--- a/src/app/home/gallery/gallery.component.html
+++ b/src/app/home/gallery/gallery.component.html
@@ -1,14 +1,48 @@
-<h1>Photos Of Missing People . . .</h1>
-<div class="table-responsive">
+<div class="container-fluid" style=" width: 100%;
+ height: 150px;" >
+ <div class="row">
+  <div class="col-md-1">
+    <img src="assets/logo.jpg" style="height: 150px;width: 120px;">
+  </div>
+  <div class="col-md-11" style="font-family:'Times New Roman', Times, serif ;">
+    <h1 style="font-weight: 600;">NATIONAL HUMAN RIGHTS COMMISSION, INDIA</h1>
+    <h2>Human Anti-Trafficking Portal</h2>
+  </div>
+ </div>
+<br>
+</div>
+
+<div class="row">
+    <div class="col-md-1"> </div>
+<div class="col-md-10">
+        <h1 style="color: #0f232e;font-weight: 600;">Photo Gallery Of Missing Persons</h1>
+
+</div>    
+</div>
+<div class="row">
+    <div class="col-md-1" ></div>
+    <div class="col-md-10">
+        <div class="table-responsive">
     
-        <table class="table table-striped table-hover">
-                <tbody>
-                    <tr *ngFor="let ph of photo">
-              
-                        <td> <img src="data:image/gif;base64,{{ph.img}}" alt="photo" style="height: 200px;width: 200px;"> </td>
-            
-                    </tr>
-                </tbody>
-            </table>
-            
-        </div>
+            <table class="table table-striped table-hover">
+                    <tbody>
+                        <tr *ngFor="let ph of photo">
+                  
+                            <td> <img src="data:image/gif;base64,{{ph.img}}" alt="photo" style="height: 200px;width: 200px;"> </td>
+                
+                        </tr>
+                    </tbody>
+                </table>
+                
+            </div>
+    </div>
+
+    <div class="col-md-1" ></div>
+</div>
+<div class="row" style="text-align: center;">
+<div class="col-md-12"> 
+    
+    <button type="button" class="btn btn-success" (click)="Home()">GO BACK HOME</button>
+    
+</div>
+    </div>
