--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -16,8 +16,7 @@
 </div>
 </div> -->
 
-<div class="container-fluid" style=" width: 100%;
- height: 150px;" >
+<div class="container-fluid" style=" width: 100%;height: 150px;" >
  <div class="row">
   <div class="col-md-1">
     <img src="assets/logo.jpg" style="height: 150px;width: 120px;">
@@ -27,7 +26,6 @@
     <h2>Human Anti-Trafficking Portal</h2>
   </div>
  </div>
-
 </div>
 <br>
 <nav class="navbar " style="left: 2%; width: 97%;background:#0f1629;">
@@ -64,15 +62,15 @@
                 </div>
               </div>  
         </div>
-        <div class="col-md-3 ">
+        <div class="col-md-3 " style="background: #e1ebe7;">
           
   <legend>Login Here</legend>
-  <div class="form-group">
+  <div class="form-group" style="text-align: left;">
       <label for="Email" >UserName</label>
       <input type="text" class="form-control" id="email" name="email" placeholder="email"
       [(ngModel)]="user.email" required    >
   </div>
-  <div class="form-group">
+  <div class="form-group" style="text-align: left;">
       <label for="password">Password</label>
       <input type="password" class="form-control" id="password" name="password" placeholder="password"
       [(ngModel)]="user.password" required >
