--- a/src/app/ngo/ngo/ngo.component.html
+++ b/src/app/ngo/ngo/ngo.component.html
@@ -1,14 +1,22 @@
 <br>
-<div class="container" style="background-color:yellow; width: 96%;
- height: 130px;" >
- <h1>Government Of India</h1>
- <h2>Anti-Trafficking Portal</h2>
+<div class="container-fluid" style=" width: 100%;height: 150px;" >
+  <div class="row">
+   <div class="col-md-2">
+     <img src="assets/ngologo.png" style="height: 150px;width: 150px;">
+   </div>
+   <div class="col-md-9" style="font-family:'Times New Roman', Times, serif ;">
+     <h1 style="font-weight: 600;">NATIONAL HUMAN RIGHTS COMMISSION, INDIA</h1>
+     <h2>Human Anti-Trafficking Portal</h2>
+   </div>
+   <div class="col-md-1">
 
- <input type="button" class="btn btn-danger" value="logout" (click)="logout()" 
- style="position: absolute; top: 30px;left: 1200px;" >  
-</div>
+   </div>
+   <input type="button" class="btn btn-danger" value="logout" (click)="logout()">
+  </div>
+  
+ </div>
 <br>
-<nav class="navbar " style="left: 2%; width: 96%;background:lightblue;">
+<nav class="navbar " style="left: 2%; width: 96%;background:#193815">
         
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -25,21 +33,18 @@
         
       <div class="container-fluid text-center">    
         <div class="row content">
-          <div class="col-md-1"></div>
-          <div class="col-md-10">
+          <div class="col-md-12">
              <router-outlet></router-outlet>
             </div>
       </div>
       </div>
 
-<div class="container-fluid">
-<div class="row">
-  <div class="col-md-12">
-    <footer class="container-fluid text-center">
-      <p>This portal is developed Under CDAC project by Vaibhav Aware</p>
-    </footer>
-  </div>
-</div>
-</div>
+      <div class="row" style="background:#193815;">
+        <div class="col-md-12">
+            <footer class="container-fluid text-center">
+                <p style="color: white;">This portal is developed for CDAC project by Vaibhav Aware</p>
+            </footer>            
+        </div>  
+        </div>
     
 
