--- a/src/app/ngo/ngusers/ngusers.component.html
+++ b/src/app/ngo/ngusers/ngusers.component.html
@@ -1,32 +1,44 @@
-<h1>List of all Users Associated With us</h1>
-<div class="table-responsive">
+<div class="row" style="background: #193815;color: white;">
+    <div class="col-md-12">
+    <div class="form-group" style="text-align: center;">
+        <h1 style="text-align: center">Users Associated With Us</h1>
+  </div>
+  </div>
+  </div>
+  <br>
+  <div class="row">
+      <div class="col-md-1"></div>
+    <div class="col-md-11"> 
+        <div class="table-responsive">
     
-    <table class="table table-striped table-hover" style="text-align: left;">
-        <thead>
-            <tr>
-                <th> Id</th>
-                <th> Name  </th>
-                <th> Role  </th>
-                <th> Email </th>
-                <th> Send  </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let user of userlist">
-                <td> {{user.uid}}</td>
-
-                <td> {{user.name}}</td>
-
-                <td> {{user.role}}</td>
-
-                <td> {{user.email}} </td>
-
-                <td> 
-                        <button type="button" class="btn btn-success" (click)="SendMessage(user.email)">Send Message</button>
-                 </td>
-
-             </tr>
-        </tbody>
-    </table>
-    
-</div>
+            <table class="table table-striped table-hover" style="text-align: left;">
+                <thead>
+                    <tr>
+                        <th> Id</th>
+                        <th> Name  </th>
+                        <th> Role  </th>
+                        <th> Email </th>
+                        <th> Send  </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let user of userlist">
+                        <td> {{user.uid}}</td>
+        
+                        <td> {{user.name}}</td>
+        
+                        <td> {{user.role}}</td>
+        
+                        <td> {{user.email}} </td>
+        
+                        <td> 
+                                <button type="button" class="btn btn-success" (click)="SendMessage(user.email)">Send Message</button>
+                         </td>
+        
+                     </tr>
+                </tbody>
+            </table>
+            
+        </div>
+    </div>
+  </div>
