--- a/src/app/police/cases/cases.component.html
+++ b/src/app/police/cases/cases.component.html
@@ -1,9 +1,14 @@
-<h1>List Of Missing Persons</h1>
-<br>
-    
+<div class="row" style="background: #092930;color: white;">
+        <div class="col-md-12">
+        <div class="form-group" style="text-align: center;">
+            <h1 style="text-align: center"> Missing Persons</h1>
+      </div>
+      </div>
+      </div>
+      <br>
   <div class="table-responsive">
     
-  <table class="table table-striped table-hover">
+  <table class="table table-striped table-hover" style="text-align: left;">
           <thead>
               <tr>
                   <th> Id</th>
