--- a/src/app/police/ngolist/ngolist.component.html
+++ b/src/app/police/ngolist/ngolist.component.html
@@ -1,35 +1,47 @@
-<h1>List of all Users Currently associated with us</h1>
-<div class="table-responsive">
+<div class="row" style="background: #092930;color: white;">
+        <div class="col-md-12">
+        <div class="form-group" style="text-align: center;">
+            <h1 style="text-align: center">List Of All Users Associated With Us</h1>
+      </div>
+      </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-1"> </div>
+        <div class="col-md-11">
+                <div class="table-responsive" style="text-align: left;">
     
-    <table class="table table-striped table-hover">
-        <thead>
-            <tr>
-                <th> Id</th>
-
-                <th> Name</th>
-                <th> Email</th>
-                <th> Role</th>
-
-                <th> Send </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let ngo of ngolist">
-                <td> {{ngo.uid}}</td>
-
-                <td> {{ngo.name}}</td>
-
-                <td> {{ngo.email}}</td>
-
-                <td> {{ngo.role}} </td>
-
-                <td> 
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th> Id</th>
                     
-                 <button type="button" class="btn btn-success" (click)="SendMessage(ngo.email)">Send Message</button>
+                                    <th> Name</th>
+                                    <th> Email</th>
+                                    <th> Role</th>
                     
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    
-</div>
+                                    <th> Send </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let ngo of ngolist">
+                                    <td> {{ngo.uid}}</td>
+                    
+                                    <td> {{ngo.name}}</td>
+                    
+                                    <td> {{ngo.email}}</td>
+                    
+                                    <td> {{ngo.role}} </td>
+                    
+                                    <td> 
+                                        
+                                     <button type="button" class="btn btn-success" (click)="SendMessage(ngo.email)">Send Message</button>
+                                        
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        
+                    </div>
+            </div>
+      </div>
