--- a/src/app/police/policecompose/policecompose.component.html
+++ b/src/app/police/policecompose/policecompose.component.html
@@ -1,22 +1,31 @@
+<div class="row" style="background: #092930;color: white;">
+        <div class="col-md-12">
+        <div class="form-group" style="text-align: center;">
+            <h1 style="text-align: center">Compose Message</h1>
+      </div>
+      </div>
+      </div>
+      <br>
 <div class="row" >
-        <div class="col-md-7">
-            <div class="form-group">
-                <label for="">To</label>
-                <input [(ngModel)]="god.ngouseremail" readonly type="text" class="form-control">
-              </div>
+    <div class="col-md-2"></div>
+    <div class="col-md-9" style="text-align: left;">
+        <div class="form-group">
+            <label for="">To</label>
+            <input [(ngModel)]="god.ngouseremail" readonly type="text" class="form-control">
+          </div>
+          <div class="form-group">
+                <label for="">From</label>
+                <input [(ngModel)]="god.fromuseremail" readonly type="text" class="form-control">
+          </div>
               <div class="form-group">
-                    <label for="">From</label>
-                    <input [(ngModel)]="god.fromuseremail" readonly type="text" class="form-control">
-              </div>
-                  <div class="form-group">
-                        <label for="">Message Body</label>
-                        
-                        <textarea name="messagebody" id="messagebody" [(ngModel)]="god.messagebody" class="form-control" rows="10" required="required"></textarea>
-                        
-                 </div>
-             <div class="form-group">
-                <button type="button" class="btn btn-success" (click)="Send()">Send</button>
-            </div>
-                 
+                    <label for="">Message Body</label>
+                    
+                    <textarea name="messagebody" id="messagebody" [(ngModel)]="god.messagebody" class="form-control" rows="10" required="required"></textarea>
+                    
+             </div>
+         <div class="form-group" style="text-align: center;">
+            <button type="button" class="btn btn-success" (click)="Send()">Send</button>
         </div>
+             
+    </div>
 </div>
