--- a/src/app/police/search/search.component.html
+++ b/src/app/police/search/search.component.html
@@ -1,11 +1,18 @@
-<h1>Search Missing Victim</h1>
-<div class="form-group">
+<div class="row" style="background: #092930;color: white;">
+    <div class="col-md-12">
+    <div class="form-group" style="text-align: center;">
+        <h1 style="text-align: center">Search Missing Person</h1>
+  </div>
+  </div>
+  </div>
+  <br>
+<div class="form-group" style="text-align: left;">
     <label for="Name" >Name</label>
     <input type="text" class="form-control" id="username" name="username" placeholder="enter name"
     [(ngModel)]="username" required    >
 </div>
   <button type="button" (click)="onSearch()" class="btn btn-primary">Search By Name</button>
-<br>
+<br><br>
      <div class="table-responsive" id="myDiv">
     
 <table class="table table-striped table-hover">
