--- a/src/app/police/updatepolice/updatepolice.component.html
+++ b/src/app/police/updatepolice/updatepolice.component.html
@@ -1,7 +1,14 @@
-<h1 style="text-align: center"> Update Profile </h1>
-
+<div class="row" style="background: #092930;color: white;">
+    <div class="col-md-12">
+    <div class="form-group" style="text-align: center;">
+        <h1 style="text-align: center">Update Profile</h1>
+  </div>
+  </div>
+  </div>
+  <br>
 <div class="row" >
-  <div class="col-md-9">
+  <div class="col-md-1"> </div>
+  <div class="col-md-11" style="text-align: left;">
       <div class="form-group">
           <label for="">Full Name</label>
           <input [(ngModel)]="god.name" type="text" class="form-control">
@@ -27,7 +34,7 @@
       </div>
 </div>
 <div class="row">
-  <div class="col-md-9">
+  <div class="col-md-12">
   <div class="form-group" style="text-align: center;">
     <button (click)="onUpdate()" class="btn btn-success">Update</button>
 </div>
